Synced locale & translated some

--- a/interface/locales/nl/common.json
+++ b/interface/locales/nl/common.json
@@ -3,11 +3,12 @@
   "about_vision_text": "Veel van ons hebben meerdere cloud accounts, schijven waarvan geen back-ups worden gemaakt en gegevens die het risico lopen verloren te gaan. We zijn afhankelijk van clouddiensten als Google Photos en iCloud, maar zitten vast met een beperkte capaciteit en vrijwel geen interoperabiliteit tussen diensten en besturingssystemen. Fotoalbums mogen niet vastzitten in het ecosysteem van een apparaat, of worden gebruikt voor advertentiegegevens. Ze moeten OS-agnostisch, permanent en persoonlijk eigendom zijn. De gegevens die we creëren zijn onze erfenis, die ons nog lang zal overleven. Open source-technologie is de enige manier om ervoor te zorgen dat we de absolute controle behouden over de gegevens die ons leven bepalen, op onbeperkte schaal.",
   "about_vision_title": "Visie",
   "accept": "Accepteren",
-  "accept_files": "Accept files",
+  "accept_files": "Accepteer bestanden",
   "accessed": "Geopend",
   "account": "Account",
   "actions": "Acties",
   "add": "Toevoegen",
+  "Add Device Description": "Scan de QR code of authenticeer je apparaat-UUID om een apparaat toe te voegen.",
   "add_device": "Apparaat Toevoegen",
   "add_file_extension_rule": "Voeg een bestandsextensie toe aan de huidige regel",
   "add_filter": "Filter Toevoegen",
@@ -18,16 +19,18 @@
   "add_location_tooltip": "Voeg pad toe als een geïndexeerde locatie",
   "add_locations": "Locaties Toevoegen",
   "add_tag": "Tag Toevoegen",
-  "added_location": "Added Location {{name}}",
-  "adding_location": "Adding Location {{name}}",
+  "added_location": "Locatie {{name}} Toegevoegd",
+  "adding_location": "Locatie {{name}} Toevoegen",
   "advanced": "Geavanceerd",
   "advanced_settings": "Geavanceerde Instellingen",
   "album": "Album",
+  "album_one": "Album",
+  "album_other": "Albums",
   "alias": "Alias",
   "all_jobs_have_been_cleared": "Alle taken zijn opgeruimd.",
   "alpha_release_description": "We zijn blij dat je de Alpha-versie van Spacedrive nu kunt uitproberen, met spannende nieuwe functies. Zoals met elke eerste release kan deze versie enkele bugs bevatten. Je kan ons helpen bij het melden van eventuele problemen die u tegenkomt op ons Discord kanaal. Je waardevolle feedback draagt in grote mate bij aan het verbeteren van de gebruikerservaring.",
-  "alpha_release_title": "Alpha Release",
-  "app_crashed": "APP CRASHED",
+  "alpha_release_title": "Alpha Versie",
+  "app_crashed": "APP GECRASHT",
   "app_crashed_description": "We're past the event horizon...",
   "appearance": "Uiterlijk",
   "appearance_description": "Verander het uiterlijk van de client.",
@@ -35,28 +38,34 @@
   "archive": "Archiveer",
   "archive_coming_soon": "Archiveren van locaties komt binnenkort...",
   "archive_info": "Exporteer gegevens van de bibliotheek als een archief, handig om de mapstructuur van de locatie te behouden.",
+  "archive_one": "Archief",
+  "archive_other": "Archieven",
   "are_you_sure": "Weet je het zeker?",
   "ascending": "Oplopend",
-  "ask_spacedrive": "Vraag het aan Space Drive",
+  "ask_spacedrive": "Vraag het aan Spacedrive",
   "assign_tag": "Tag toewijzen",
+  "assign_tags": "Tags toewijzen",
   "audio": "Audio",
   "audio_preview_not_supported": "Audio voorvertoning wordt niet ondersteund.",
   "auto": "Auto",
   "back": "Terug",
-  "backfill_sync": "Synchronisatiebewerkingen voor opvulling",
+  "backfill_sync": "Synchronisatiebewerkingen Aanvullen",
   "backfill_sync_description": "De bibliotheek wordt gepauzeerd totdat het aanvullen is voltooid",
   "backups": "Backups",
   "backups_description": "Beheer je Spacedrive database backups.",
-  "bitrate": "Bitsnelheid",
+  "bar_graph_info": "Beweeg over elke balk om het bestandstype te zien. Dubbelklik om te navigeren.",
   "blur_effects": "Blur Effecten",
   "blur_effects_description": "Op sommige onderdelen wordt een blur effect toegepast.",
-  "book": "book",
+  "book": "boek",
+  "book_one": "Boek",
+  "book_other": "Boeken",
+  "calculating_library_statistics": "Bibliotheek statistieken berekenen...",
   "cancel": "Annuleren",
   "cancel_selection": "Selectie annuleren",
   "canceled": "Geannuleerd",
   "celcius": "Celsius",
   "change": "Wijzigen",
-  "change_view_setting_description": "Wijzig de standaardverkennerweergave",
+  "change_view_setting_description": "Wijzig de standaard-verkennerweergave",
   "changelog": "Wijzigingslogboek",
   "changelog_page_description": "Zie welke coole nieuwe functies we aan het maken zijn",
   "changelog_page_title": "Wijzigingslogboek",
@@ -70,22 +79,28 @@
   "close_current_tab": "Huidig tabblad sluiten",
   "cloud": "Cloud",
   "cloud_connect_description": "Wilt u uw bibliotheek verbinden met de cloud?",
-  "cloud_drives": "Cloud Drives",
+  "cloud_drives": "Cloud Schijven",
   "cloud_sync": "Cloudsynchronisatie",
   "cloud_sync_description": "Beheer de processen die uw bibliotheek synchroniseren met Spacedrive Cloud",
   "clouds": "Clouds",
   "code": "Code",
-  "collection": "Collection",
+  "code_one": "Code",
+  "code_other": "Code",
+  "collection": "Verzameling",
+  "collection_one": "Verzameling",
+  "collection_other": "Verzamelingen",
   "color": "Kleur",
   "color_profile": "Kleur profiel",
   "color_space": "Kleur ruimte",
   "coming_soon": "Komt binnenkort",
   "completed": "Voltooid",
-  "completed_with_errors": "Compleet met fouten",
+  "completed_with_errors": "Voltooid met fouten",
   "compress": "Comprimeer",
-  "config": "Config",
+  "config": "Configuratie",
+  "config_one": "Configuratie",
+  "config_other": "Configuraties",
   "configure_location": "Locatie Configureren",
-  "confirm": "Confirm",
+  "confirm": "Bevestig",
   "Connect": "Aansluiten",
   "connect_cloud": "Een cloud verbinden",
   "connect_cloud_description": "Verbind uw cloudaccounts met Spacedrive.",
@@ -97,7 +112,7 @@
   "connecting_library_to_cloud": "Bibliotheek verbinden met Spacedrive Cloud...",
   "contacts": "Contacten",
   "contacts_description": "Beheer je contacten in Spacedrive.",
-  "contains": "bevatten",
+  "contains": "bevat",
   "content_id": "Inhouds-ID",
   "continue": "Verdergaan",
   "convert_to": "Omzetten naar",
@@ -115,7 +130,7 @@
   "create_folder_success": "Nieuwe map gemaakt: {{name}}",
   "create_library": "Creëer Bibliotheek",
   "create_library_description": "Bibliotheken zijn een veilige lokale database. Je bestanden blijven waar ze zijn, de Bibliotheek catalogiseert ze een slaat alle Spacedrive gerelateerde gegevens op.",
-  "create_location": "Create Location",
+  "create_location": "Creëer Locatie",
   "create_new_library": "Creëer nieuwe bibliotheek",
   "create_new_library_description": "Bibliotheken zijn een veilige lokale database. Je bestanden blijven waar ze zijn, de Bibliotheek catalogiseert ze een slaat alle Spacedrive gerelateerde gegevens op.",
   "create_new_tag": "Creëer Nieuwe Tag",
@@ -134,11 +149,13 @@
   "dark": "Donker",
   "data_folder": "Gegevens Map",
   "database": "Database",
+  "database_one": "Database",
+  "database_other": "Databases",
   "date": "Datum",
-  "date_accessed": "Datum geopend",
-  "date_created": "Datum gecreeërd",
-  "date_indexed": "Datum geïndexeerd",
-  "date_modified": "Datum gewijzigd",
+  "date_accessed": "Datum Geopend",
+  "date_created": "Datum Gecreeërd",
+  "date_indexed": "Datum Geïndexeerd",
+  "date_modified": "Datum Gewijzigd",
   "date_taken": "Datum Genomen",
   "date_time_format": "Datum-en tijdnotatie",
   "date_time_format_description": "Kies de datumnotatie die wordt weergegeven in Spacedrive",
@@ -178,11 +195,14 @@
   "display_name": "Weergave Naam",
   "distance": "Afstand",
   "do_the_thing": "Do the thing",
+  "docker": "Docker",
   "document": "Document",
   "done": "Klaar",
   "dont_have_any": "Looks like you don't have any!",
   "dont_show_again": "Niet meer laten zien",
   "dotfile": "Dotfile",
+  "dotfile_one": "Dotfiles",
+  "dotfile_other": "Dotfiles",
   "double_click_action": "Dubbele klikactie",
   "download": "Download",
   "downloading_update": "Update wordt gedownload",
@@ -207,6 +227,8 @@
   "encrypt_library_coming_soon": "Bibliotheek versleuteling komt binnenkort",
   "encrypt_library_description": "Schakel versleuteling in voor deze bibliotheek. dit versleuteld alleen de Spacedrive database, niet de bestanden zelf.",
   "encrypted": "Encrypted",
+  "encrypted_one": "Encrypted",
+  "encrypted_other": "Encrypted",
   "ends_with": "eindigt met",
   "ephemeral_notice_browse": "Blader door je bestand en mappen rechtstreeks vanaf je apparaat.",
   "ephemeral_notice_consider_indexing": "Overweeg om je lokale locaties te indexeren voor een snellere en efficiënte verkenning.",
@@ -217,7 +239,10 @@
   "error": "Fout",
   "error_loading_original_file": "Fout bij het laden van het originele bestand",
   "error_message": "Error: {{error}}.",
+  "error_unknown": "An unknown error occurred.",
   "executable": "Executable",
+  "executable_one": "Executable",
+  "executable_other": "Executables",
   "expand": "Uitbreiden",
   "explorer": "Verkenner",
   "explorer_settings": "Explorer-instellingen",
@@ -263,11 +288,13 @@
   "feedback_login_description": "Inloggen stelt ons in staat om te reageren op jouw feedback",
   "feedback_placeholder": "Jouw feedback...",
   "feedback_toast_error_message": "Er is een fout opgetreden bij het verzenden van je feedback. Probeer het opnieuw.",
+  "fetching_file_kind_statistics": "Fetching file kind statistics...",
   "file_already_exist_in_this_location": "Bestand bestaat al op deze locatie",
   "file_directory_name": "Bestands-/mapnaam",
   "file_extension_description": "Bestandsextensie (bijvoorbeeld .mp4, .jpg, .txt)",
   "file_from": "File {{file}} from {{name}}",
   "file_indexing_rules": "Bestand indexeringsregels",
+  "file_many": "files",
   "file_one": "file",
   "file_other": "files",
   "file_picker_not_supported": "File picker not supported on this platform",
@@ -275,7 +302,11 @@
   "filters": "Filters",
   "flash": "Flash",
   "folder": "Folder",
+  "folder_one": "Folder",
+  "folder_other": "Folders",
   "font": "Font",
+  "font_one": "Font",
+  "font_other": "Fonts",
   "for_library": "For library {{name}}",
   "forced": "Gedwongen",
   "forward": "Vooruit",
@@ -319,6 +350,8 @@
   "image": "Image",
   "image_labeler_ai_model": "AI model voor beeldlabelherkenning",
   "image_labeler_ai_model_description": "Het model dat wordt gebruikt om objecten in afbeeldingen te herkennen. Grotere modellen zijn nauwkeuriger, maar langzamer.",
+  "image_one": "Image",
+  "image_other": "Images",
   "import": "Importeer",
   "incoming_spacedrop": "Incoming Spacedrop",
   "indexed": "Geïndexeerd",
@@ -361,9 +394,12 @@
   "join_discord": "Meedoen op Discord",
   "join_library": "Neem deel aan een Bibliotheek",
   "join_library_description": "Bibliotheken zijn een veilige lokale database op het apparaat. Je bestanden blijven waar ze zijn, de bibliotheek catalogiseert ze en slaat alle Spacedrive gerelateerde gegevens op.",
+  "joining": "Joining",
   "key": "Sleutel",
   "key_manager": "Sleutel Beheerder",
   "key_manager_description": "Creëer encryptiesleutels, koppel en ontkoppel je sleutels om te zien dat bestanden direct worden versleuteld.",
+  "key_one": "Key",
+  "key_other": "Keys",
   "keybinds": "Toetscombinaties",
   "keybinds_description": "Bekijk en beheer client toetscombinaties",
   "keys": "Sleutels",
@@ -391,6 +427,8 @@
   "library_settings_description": "Algemene Instellingen met betrekking to de momenteel actieve bibliotheek.",
   "light": "Licht",
   "link": "Link",
+  "link_one": "Link",
+  "link_other": "Links",
   "list_view": "Lijstweergave",
   "list_view_notice_description": "Navigeer eenvoudig door je bestanden en mappen met Lijstweergave. In deze weergave worden je bestanden weergegeven in een eenvoudige, georganiseerde lijstindeling, zodat je snel de bestanden kunt vinden en openen die je nodig hebt.",
   "loading": "Laden",
@@ -398,6 +436,8 @@
   "local_locations": "Lokale Locaties",
   "local_node": "Lokale Node",
   "location": "Locatie",
+  "location_one": "Locatie",
+  "location_other": "Locaties",
   "location_added_successfully": "Locatie succesvol toegevoegd.",
   "location_connected_tooltip": "De locatie wordt in de gaten gehouden voor wijzigingen",
   "location_deleted_successfully": "Locatie succesvol verwijderd.",
@@ -405,8 +445,6 @@
   "location_display_name_info": "De naam van deze Locatie, deze wordt weergegeven in de zijbalk. Zal de daadwerkelijke map op schijf niet hernoemen.",
   "location_empty_notice_message": "Er zijn hier geen bestanden gevonden",
   "location_is_already_linked": "Locatie is al gekoppeld",
-  "location_one": "Locatie",
-  "location_other": "Locaties",
   "location_path_info": "Het pad naar deze locatie, dit is waar bestanden op de schijf worden opgeslagen.",
   "location_type": "Locatie Type",
   "location_type_managed": "Spacedrive sorteert bestanden voor je. Als de Locatie niet leeg is, wordt er een map \"Spacedrive\" gecreëerd.",
@@ -433,6 +471,8 @@
   "meet_contributors_behind_spacedrive": "Maak kennis met de bijdragers achter Spacedrive=",
   "meet_title": "Maak kennis met {{title}}",
   "mesh": "Mesh",
+  "mesh_one": "Mesh",
+  "mesh_other": "Mesh",
   "miles": "Mijlen",
   "mode": "Modus",
   "model": "Model",
@@ -514,6 +554,7 @@
   "open_with": "Open met",
   "opening_trash": "Opening Trash",
   "or": "OF",
+  "other": "Other",
   "overview": "Overzicht",
   "p2p_visibility": "P2P-zichtbaarheid",
   "p2p_visibility_contacts_only": "Alleen contacten",
@@ -521,6 +562,8 @@
   "p2p_visibility_disabled": "Gehandicapt",
   "p2p_visibility_everyone": "Iedereen",
   "package": "Package",
+  "package_one": "Package",
+  "package_other": "Packages",
   "page": "Pagina",
   "page_shortcut_description": "Verschillende pagina's in de app",
   "pair": "Koppel",
@@ -595,7 +638,9 @@
   "save_spacedrop": "Save Spacedrop",
   "saved_searches": "Opgeslagen Zoekopdrachten",
   "screenshot": "Screenshot",
-  "search": "Zoekopdracht",
+  "screenshot_one": "Screenshot",
+  "screenshot_other": "Screenshots",
+  "search": "Zoeken",
   "search_extensions": "Zoek extensies",
   "search_for_files_and_actions": "Zoeken naar bestanden en acties...",
   "search_locations": "Search locations",
@@ -604,6 +649,7 @@
   "security_description": "Houd je client veilig.",
   "see_less": "See less",
   "see_more": "See more",
+  "select_library": "Select a Cloud Library",
   "send": "Verstuur",
   "send_report": "Send Report",
   "sender": "Afzender",
@@ -656,6 +702,7 @@
   "starts_with": "begint met",
   "stop": "Stop",
   "stopping": "Stoppen...",
+  "submit": "Submit",
   "success": "Succes",
   "support": "Ondersteuning",
   "switch_to_grid_view": "Overschakelen naar rasterweergave",
@@ -673,6 +720,12 @@
   "tag_one": "Tag",
   "tag_other": "Tags",
   "tags": "Tags",
+  "tags_bulk_assigned": "Assigned tag \"{{tag_name}}\" to {{file_count}} $t(file, { \"count\": {{file_count}} }).",
+  "tags_bulk_failed_with_tag": "Could not assign tag \"{{tag_name}}\" to {{file_count}} $t(file, { \"count\": {{file_count}} }): {{error_message}}",
+  "tags_bulk_failed_without_tag": "Could not tag {{file_count}} $t(file, { \"count\": {{file_count}} }): {{error_message}}",
+  "tags_bulk_instructions": "Select one or more files and press a number key to assign/unassign the corresponding tag.",
+  "tags_bulk_mode_active": "Tag assign mode is enabled.",
+  "tags_bulk_unassigned": "Unassigned tag \"{{tag_name}}\" to {{file_count}} $t(file, { \"count\": {{file_count}} }).",
   "tags_description": "Beheer je tags.",
   "tags_notice_message": "Er zijn geen items toegewezen aan deze tag.",
   "task": "task",
@@ -683,6 +736,8 @@
   "temperature": "Temperatuur",
   "text": "Text",
   "text_file": "Tekstbestand",
+  "text_one": "Text",
+  "text_other": "Texts",
   "text_size": "Tekstgrootte",
   "thank_you_for_your_feedback": "Bedankt voor je feedback!",
   "thumbnailer_cpu_usage": "CPU-gebruik van thumbnailer",
@@ -705,11 +760,16 @@
   "total_bytes_free_description": "Vrije ruimte beschikbaar op alle knooppunten die verbonden zijn met de bibliotheek.",
   "total_bytes_used": "Totale gebruikte ruimte",
   "total_bytes_used_description": "Totale ruimte die wordt gebruikt op alle knooppunten die zijn verbonden met de bibliotheek.",
+  "total_files": "Total files",
   "trash": "Afval",
   "type": "Type",
   "ui_animations": "UI Animaties",
   "ui_animations_description": "Dialogen en andere UI elementen zullen animeren bij het openen en sluiten.",
+  "unidentified_files": "unidentified files",
+  "unidentified_files_info": "Files that Spacedrive has been unable to identify.",
   "unknown": "Unknown",
+  "unknown_one": "Unknown",
+  "unknown_other": "Unknowns",
   "unnamed_location": "Naamloze Locatie",
   "update": "Bijwerken",
   "update_downloaded": "Update gedownload. Herstart Spacedrive om te installeren",
@@ -728,8 +788,12 @@
   "view_changes": "Bekijk wijzigingen",
   "want_to_do_this_later": "Wil je dit later doen?",
   "web_page_archive": "Web Page Archive",
+  "web_page_archive_one": "Web Page Archive",
+  "web_page_archive_other": "Web Pages Archive",
   "website": "Website",
   "widget": "Widget",
+  "widget_one": "Widget",
+  "widget_other": "Widgets",
   "with_descendants": "Met Nakomelingen",
   "your_account": "Je account",
   "your_account_description": "Spacedrive account en informatie.",
