improve more nl translations

--- a/interface/locales/nl/common.json
+++ b/interface/locales/nl/common.json
@@ -36,10 +36,10 @@
   "appearance_description": "Verander het uiterlijk van de client.",
   "apply": "Toepassing",
   "archive": "Archiveer",
-  "archive_coming_soon": "Archiveren van locaties komt binnenkort...",
-  "archive_info": "Exporteer gegevens van de bibliotheek als een archief, handig om de mapstructuur van de locatie te behouden.",
   "archive_one": "Archief",
   "archive_other": "Archieven",
+  "archive_coming_soon": "Archiveren van locaties komt binnenkort...",
+  "archive_info": "Exporteer gegevens van de bibliotheek als een archief, handig om de mapstructuur van de locatie te behouden.",
   "are_you_sure": "Weet je het zeker?",
   "ascending": "Oplopend",
   "ask_spacedrive": "Vraag het aan Spacedrive",
@@ -54,6 +54,7 @@
   "backups": "Backups",
   "backups_description": "Beheer je Spacedrive database backups.",
   "bar_graph_info": "Beweeg over elke balk om het bestandstype te zien. Dubbelklik om te navigeren.",
+  "bitrate": "Bitsnelheid",
   "blur_effects": "Blur Effecten",
   "blur_effects_description": "Op sommige onderdelen wordt een blur effect toegepast.",
   "book": "boek",
@@ -101,10 +102,10 @@
   "config_other": "Configuraties",
   "configure_location": "Locatie Configureren",
   "confirm": "Bevestig",
-  "Connect": "Aansluiten",
+  "Connect": "Verbinden",
   "connect_cloud": "Een cloud verbinden",
   "connect_cloud_description": "Verbind uw cloudaccounts met Spacedrive.",
-  "connect_device": "Een apparaat aansluiten",
+  "connect_device": "Een apparaat verbinden",
   "connect_device_description": "Spacedrive werkt het beste op al uw apparaten.",
   "connect_library_to_cloud": "Verbind de bibliotheek met Spacedrive Cloud",
   "connected": "Verbonden",
@@ -148,6 +149,7 @@
   "cut_success": "Items knippen",
   "dark": "Donker",
   "data_folder": "Gegevens Map",
+  "data_folder_modification_warning": "Het wijzigen of back-uppen van de gegevens in deze map kan onherstelbare schade veroorzaken! Ga op eigen risico verder!",
   "database": "Database",
   "database_one": "Database",
   "database_other": "Databases",
@@ -173,7 +175,7 @@
   "delete_location_description": "Als je een locatie verwijdert, worden ook alle bijbehorende bestanden uit de Spacedrive database verwijderd, de bestanden zelf worden niet verwijderd.",
   "delete_object": "Object verwijderen",
   "delete_rule": "Verwijder regel",
-  "delete_rule_confirmation": "Are you sure you want to delete this rule?",
+  "delete_rule_confirmation": "Weet je zeker dat je deze regel wilt verwijderen?",
   "delete_tag": "Verwijder Tag",
   "delete_tag_description": "Weet je zeker dat je deze tag wilt verwijderen? Dit kan niet ongedaan worden gemaakt en ge-tagde bestanden worden ontkoppeld.",
   "delete_warning": "hiermee wordt je {{type}} permanent verwijderd, we hebben nog geen prullenbak...",
@@ -187,6 +189,7 @@
   "dialog": "Dialoog",
   "dialog_shortcut_description": "Om acties en bewerkingen uit te voeren",
   "direction": "Richting",
+  "drop_files_here_to_send_with": "Sleep bestanden hiernaartoe om te verzenden met Spacedrop",
   "directory_one": "directory",
   "directory_other": "directories",
   "disabled": "Uitgeschakeld",
@@ -198,7 +201,7 @@
   "docker": "Docker",
   "document": "Document",
   "done": "Klaar",
-  "dont_have_any": "Looks like you don't have any!",
+  "dont_have_any": "Het lijkt erop dat je er geen hebt!",
   "dont_show_again": "Niet meer laten zien",
   "dotfile": "Dotfile",
   "dotfile_one": "Dotfiles",
@@ -226,23 +229,23 @@
   "encrypt_library": "Versleutel Bibliotheek",
   "encrypt_library_coming_soon": "Bibliotheek versleuteling komt binnenkort",
   "encrypt_library_description": "Schakel versleuteling in voor deze bibliotheek. dit versleuteld alleen de Spacedrive database, niet de bestanden zelf.",
-  "encrypted": "Encrypted",
-  "encrypted_one": "Encrypted",
-  "encrypted_other": "Encrypted",
+  "encrypted": "Versleuteld",
+  "encrypted_one": "Versleuteld",
+  "encrypted_other": "Versleuteld",
   "ends_with": "eindigt met",
   "ephemeral_notice_browse": "Blader door je bestand en mappen rechtstreeks vanaf je apparaat.",
   "ephemeral_notice_consider_indexing": "Overweeg om je lokale locaties te indexeren voor een snellere en efficiënte verkenning.",
-  "equals": "ligt",
+  "equals": "gelijk aan",
   "erase": "Wis",
   "erase_a_file": "Wis een bestand",
   "erase_a_file_description": "Configureer je wis instellingen.",
   "error": "Fout",
   "error_loading_original_file": "Fout bij het laden van het originele bestand",
   "error_message": "Error: {{error}}.",
-  "error_unknown": "An unknown error occurred.",
-  "executable": "Executable",
-  "executable_one": "Executable",
-  "executable_other": "Executables",
+  "error_unknown": "Er is een onbekende fout opgetreden.",
+  "executable": "Toepassing",
+  "executable_one": "Toepassing",
+  "executable_other": "Toepassingen",
   "expand": "Uitbreiden",
   "explorer": "Verkenner",
   "explorer_settings": "Explorer-instellingen",
@@ -257,30 +260,30 @@
   "extensions_description": "Installeer extensies om de functionaliteit van deze client uit te breiden.",
   "fahrenheit": "Fahrenheit",
   "failed": "Mislukt",
-  "failed_to_add_location": "Failed to add location",
-  "failed_to_cancel_job": "Kan taak niet annuleren.",
-  "failed_to_clear_all_jobs": "Kan niet alle taken wissen.",
+  "failed_to_add_location": "Locatie toevoegen is mislukt",
+  "failed_to_cancel_job": "Taak annuleren is mislukt.",
+  "failed_to_clear_all_jobs": "Alle taken wissen is mislukt.",
   "failed_to_copy_file": "Kopiëren van bestand is mislukt",
-  "failed_to_copy_file_path": "Kan bestandspad niet kopiëren",
+  "failed_to_copy_file_path": "Bestandspad kopiëren is mislukt",
   "failed_to_cut_file": "Knippen van bestand is mislukt",
-  "failed_to_delete_rule": "Failed to delete rule",
-  "failed_to_download_update": "Update kon niet worden gedownload",
-  "failed_to_duplicate_file": "Kan bestand niet dupliceren",
-  "failed_to_generate_checksum": "Kan controlegetal niet genereren",
-  "failed_to_generate_labels": "Kan labels niet genereren",
-  "failed_to_generate_thumbnails": "Kan voorvertoningen niet genereren",
-  "failed_to_load_tags": "Kan tags niet laden",
-  "failed_to_open_file_body": "Couldn't open file, due to an error: {{error}}",
-  "failed_to_open_file_title": "Failed to open file",
-  "failed_to_open_file_with": "Failed to open file, with: {{data}}",
-  "failed_to_pause_job": "Kan taak niet pauzeren.",
-  "failed_to_reindex_location": "Kan locatie niet herindexeren",
-  "failed_to_remove_file_from_recents": "Kan bestand niet verwijderen uit recente bestanden",
-  "failed_to_remove_job": "Kan taak niet verwijderen.",
-  "failed_to_rename_file": "Could not rename {{oldName}} to {{newName}}",
-  "failed_to_rescan_location": "Kan locatie niet opnieuw scannen",
-  "failed_to_resume_job": "Kan taak niet hervatten.",
-  "failed_to_update_location_settings": "Kan locatie instellingen niet updaten",
+  "failed_to_delete_rule": "Regel verwijderen is mislukt",
+  "failed_to_download_update": "Update downloaden is mislukt",
+  "failed_to_duplicate_file": "Bestand dupliceren is mislukt",
+  "failed_to_generate_checksum": "Controlegetal genereren is mislukt",
+  "failed_to_generate_labels": "Labels genereren is mislukt",
+  "failed_to_generate_thumbnails": "Voorvertoningen genereren is mislukt",
+  "failed_to_load_tags": "Tags laden is mislukt",
+  "failed_to_open_file_body": "Bestand openen is mislukt, vanwege een fout: {{error}}",
+  "failed_to_open_file_title": "Bestand openen is mislukt",
+  "failed_to_open_file_with": "Bestand openen is mislukt, met: {{data}}",
+  "failed_to_pause_job": "Taak pauzeren is mislukt.",
+  "failed_to_reindex_location": "Locatie herindexeren is mislukt",
+  "failed_to_remove_file_from_recents": "Bestand verwijderen uit recente bestanden is mislukt",
+  "failed_to_remove_job": "Taak verwijderen is mislukt.",
+  "failed_to_rename_file": "Kan {{oldName}} niet hernoemen naar {{newName}}",
+  "failed_to_rescan_location": "Locatie opnieuw scannen is mislukt",
+  "failed_to_resume_job": "Taak hervatten is mislukt.",
+  "failed_to_update_location_settings": "Locatie instellingen updaten is mislukt",
   "favorite": "Favoriet",
   "favorites": "Favorieten",
   "feedback": "Feedback",
@@ -288,26 +291,25 @@
   "feedback_login_description": "Inloggen stelt ons in staat om te reageren op jouw feedback",
   "feedback_placeholder": "Jouw feedback...",
   "feedback_toast_error_message": "Er is een fout opgetreden bij het verzenden van je feedback. Probeer het opnieuw.",
-  "fetching_file_kind_statistics": "Fetching file kind statistics...",
+  "fetching_file_kind_statistics": "Statistieken van bestandstype ophalen...",
   "file_already_exist_in_this_location": "Bestand bestaat al op deze locatie",
   "file_directory_name": "Bestands-/mapnaam",
   "file_extension_description": "Bestandsextensie (bijvoorbeeld .mp4, .jpg, .txt)",
-  "file_from": "File {{file}} from {{name}}",
+  "file_from": "Bestand {{file}} van {{name}}",
   "file_indexing_rules": "Bestand indexeringsregels",
-  "file_many": "files",
-  "file_one": "file",
-  "file_other": "files",
-  "file_picker_not_supported": "File picker not supported on this platform",
+  "file_one": "bestand",
+  "file_other": "bestanden",
+  "file_picker_not_supported": "Bestandskiezer wordt niet ondersteund op dit platform",
   "filter": "Filter",
   "filters": "Filters",
-  "flash": "Flash",
-  "folder": "Folder",
-  "folder_one": "Folder",
-  "folder_other": "Folders",
-  "font": "Font",
-  "font_one": "Font",
-  "font_other": "Fonts",
-  "for_library": "For library {{name}}",
+  "flash": "Flitzer",
+  "folder": "Map",
+  "folder_one": "Map",
+  "folder_other": "Mappen",
+  "font": "Lettertype",
+  "font_one": "Lettertype",
+  "font_other": "Lettertypes",
+  "for_library": "Voor bibliotheek {{name}}",
   "forced": "Gedwongen",
   "forward": "Vooruit",
   "free_of": "vrij van",
@@ -325,12 +327,12 @@
   "gitignore": "Git negeren",
   "glob_description": "Glob (bijvoorbeeld **/.git)",
   "go_back": "Ga Terug",
-  "go_to_labels": "Ga naar etiketten",
+  "go_to_labels": "Ga naar labels",
   "go_to_location": "Ga naar locatie",
   "go_to_overview": "Ga naar overzicht",
   "go_to_recents": "Ga naar recent",
-  "go_to_settings": "Ga naar Instellingen",
-  "go_to_tag": "Ga naar taggen",
+  "go_to_settings": "Ga naar instellingen",
+  "go_to_tag": "Ga naar tag",
   "got_it": "Begrepen",
   "grid_gap": "Tussenruimte",
   "grid_view": "Rasterweergave",
@@ -347,15 +349,15 @@
   "hosted_locations": "Hosted Locations",
   "hosted_locations_description": "Augment your local storage with our cloud!",
   "icon_size": "Pictogramgrootte",
-  "image": "Image",
+  "image": "Afbeelding",
+  "image_one": "Afbeelding",
+  "image_other": "Afbeeldingen",
   "image_labeler_ai_model": "AI model voor beeldlabelherkenning",
   "image_labeler_ai_model_description": "Het model dat wordt gebruikt om objecten in afbeeldingen te herkennen. Grotere modellen zijn nauwkeuriger, maar langzamer.",
-  "image_one": "Image",
-  "image_other": "Images",
   "import": "Importeer",
-  "incoming_spacedrop": "Incoming Spacedrop",
+  "incoming_spacedrop": "Inkomende Spacedrop",
   "indexed": "Geïndexeerd",
-  "indexed_new_files": "Indexed new files {{name}}",
+  "indexed_new_files": "Nieuwe bestanden geïndexeerd {{name}}",
   "indexer_rule_reject_allow_label": "Standaard functioneert een indexeringsregel als een Afwijzingslijst, wat resulteert in de uitsluiting van alle bestanden die aan de criteria voldoen. Als u deze optie inschakelt, wordt deze omgezet in een lijst met toegestane bestanden, waardoor de locatie alleen bestanden kan indexeren die aan de opgegeven regels voldoen.",
   "indexer_rules": "Indexeringsregels",
   "indexer_rules_error": "Error while retrieving indexer rules",
@@ -396,10 +398,10 @@
   "join_library_description": "Bibliotheken zijn een veilige lokale database op het apparaat. Je bestanden blijven waar ze zijn, de bibliotheek catalogiseert ze en slaat alle Spacedrive gerelateerde gegevens op.",
   "joining": "Joining",
   "key": "Sleutel",
+  "key_one": "Sleutel",
+  "key_other": "Sleutels",
   "key_manager": "Sleutel Beheerder",
   "key_manager_description": "Creëer encryptiesleutels, koppel en ontkoppel je sleutels om te zien dat bestanden direct worden versleuteld.",
-  "key_one": "Key",
-  "key_other": "Keys",
   "keybinds": "Toetscombinaties",
   "keybinds_description": "Bekijk en beheer client toetscombinaties",
   "keys": "Sleutels",
@@ -411,9 +413,9 @@
   "labels": "Labels",
   "language": "Taal",
   "language_description": "Wijzig de taal van de Spacedrive interface",
-  "learn_more": "Learn More",
-  "learn_more_about_telemetry": "Meer informatie over telemetrie",
-  "less": "less",
+  "learn_more": "Ontdek Meer",
+  "learn_more_about_telemetry": "Ontdek meer over telemetrie",
+  "less": "minder",
   "libraries": "Bibliotheken",
   "libraries_description": "De database bevat all bibliotheek gegevens en metagegevens van bestanden.",
   "library": "Bibliotheek",
@@ -604,7 +606,7 @@
   "regenerate_thumbs": "Regenereer Miniaturen",
   "reindex": "Herindexeren",
   "reject": "Afwijzen",
-  "reject_files": "Reject files",
+  "reject_files": "Bestanden afwijzen",
   "relay_listeners_error": "Fout bij het maken van de relay-listener. Controleer uw firewallinstellingen!",
   "reload": "Herlaad",
   "remote_access": "Schakel externe toegang in",
@@ -734,10 +736,10 @@
   "telemetry_description": "Schakel in om de ontwikkelaars te voorzien van gedetailleerde gebruik en telemetrie gegevens om de app te verbeteren. Schakel uit om alleen basisgegevens te verzenden: je status, app-versie, core versie en platform (bijvoorbeeld, mobiel, browser, of desktop).",
   "telemetry_title": "Deel Aanvullende Telemetrie en Gebruiksgegevens",
   "temperature": "Temperatuur",
-  "text": "Text",
+  "text": "Tekst",
+  "text_one": "Tekst",
+  "text_other": "Teksten",
   "text_file": "Tekstbestand",
-  "text_one": "Text",
-  "text_other": "Texts",
   "text_size": "Tekstgrootte",
   "thank_you_for_your_feedback": "Bedankt voor je feedback!",
   "thumbnailer_cpu_usage": "CPU-gebruik van thumbnailer",
@@ -761,20 +763,20 @@
   "total_bytes_used": "Totale gebruikte ruimte",
   "total_bytes_used_description": "Totale ruimte die wordt gebruikt op alle knooppunten die zijn verbonden met de bibliotheek.",
   "total_files": "Total files",
-  "trash": "Afval",
+  "trash": "Prullenbak",
   "type": "Type",
   "ui_animations": "UI Animaties",
   "ui_animations_description": "Dialogen en andere UI elementen zullen animeren bij het openen en sluiten.",
   "unidentified_files": "unidentified files",
   "unidentified_files_info": "Files that Spacedrive has been unable to identify.",
-  "unknown": "Unknown",
-  "unknown_one": "Unknown",
-  "unknown_other": "Unknowns",
+  "unknown": "Onbekend",
+  "unknown_one": "Onbekend",
+  "unknown_other": "Onbekende",
   "unnamed_location": "Naamloze Locatie",
   "update": "Bijwerken",
   "update_downloaded": "Update gedownload. Herstart Spacedrive om te installeren",
   "updated_successfully": "Succesvol bijgewerkt, je gebruikt nu versie {{version}}",
-  "uploaded_file": "Uploaded file!",
+  "uploaded_file": "Bestand geüpload!",
   "usage": "Gebruik",
   "usage_description": "Je bibliotheek gebruik en hardware informatie",
   "vacuum": "Vacuüm",
@@ -787,9 +789,9 @@
   "video_preview_not_supported": "Video voorvertoning wordt niet ondersteund.",
   "view_changes": "Bekijk wijzigingen",
   "want_to_do_this_later": "Wil je dit later doen?",
-  "web_page_archive": "Web Page Archive",
-  "web_page_archive_one": "Web Page Archive",
-  "web_page_archive_other": "Web Pages Archive",
+  "web_page_archive": "Webpagina Archief",
+  "web_page_archive_one": "Webpagina Archief",
+  "web_page_archive_other": "Webpagina Archieven",
   "website": "Website",
   "widget": "Widget",
   "widget_one": "Widget",
